--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Container for game description & rule-->
     <div id="info-header">
       <h1 id="game-title">Sliding Puzzle</h1>
-      <img src="./public/example.jpg" id="example">
+      <img src="./images/example.jpg" id="example">
       <p><span>Game Rule: </span><br>
         The goal of the sliding puzzle is to arrange the blocks in your board to match the winning pattern. At least one block can be slide around at every step given that there is always an empty space somewhere on the puzzle board.</p><br><br>
       <p><span>Control Keys: </span><br>
